#49 Remove some instances of a bad/unecesssary waitForRecoveries call, address a few more test issues.